package local.sop.sopinfo.workhour.application.api.dto;

import java.util.UUID;

public record CreatedWorkHourScheduleResult(UUID id) {

}
