@startuml Work Hour BC Class Diagram
top to bottom direction
title Work Hour BC Class Diagram
skinparam packageStyle rectangle
skinparam Shadowing false
skinparam classFontSize 12
skinparam classFontName Arial
skinparam WrapWidth 260
skinparam ComponentStyle uml2

' Colors
' Root package = LightGrey
' BC folders = LightSteelBlue
' Domain folders = LightCoral 
' Shared Kernel folders = LightYellow
' common web folders = LightGreen

package "sharedkernel" #LightYellow {}
package "common.web" #LightGreen {}
package "common.data" #LightYellow {}
package "common.security" #LightCoral {}
package "common.core" #LightGreen {}

folder "Work Hour" #LightGrey {
	
	package "sop.local.sopinfo" {
		package "workhour" #LightSteelBlue {

			package "domain" #LightCoral {
				package "model" {
					package "valueobjects" {
						class WorkScheduleId {
							- value : UUID
						}
						class WorkScheduleTime {
							- time : String
						}
						note bottom of WorkScheduleTime
							Invariants: 
							- Is in HH:mm format
							- Is a valid time (00:00 to 23:59)
							- Is not null or empty
						end note	
						enum Weekday {
							- day : enum {Monday, Tuesday, Wednesday, Thursday, Friday, Saturday, Sunday}
						}
						note bottom of Weekday
							Invariants: 
							- Is a valid weekday (Monday to Sunday)
							- Is not null
						end note
						class SopRef {
							- id : UUID
						}
						note bottom of SopRef
							Invariants: 
							- Is a validated sop UUID Key
						end note	
					}
					class WorkHourSchedule <<Aggregate root>> {
						- scheduleId : UUID
						- startTime : ScheduleTime
						- endTime : ScheduleTime
						- weekday : Weekday
						- sopRef : Sopef
					}
					WorkHourSchedule "1" *-- "1" WorkScheduleId : has >
					WorkHourSchedule "1" *-- "n" WorkScheduleTime : has >
					WorkHourSchedule "1" *-- "n" Weekday : has >
					WorkHourSchedule "1" *-- "n" SopId : has >
				}
				package "ports.out" {
					interface WorkHourRepositoryPort {
						+ save(whs: WorkHourSchedule): WorkHourSchedule
						+ findById(whs: WorkHourScheduleId): Optional<WorkHourSchedule>
						+ findBySearchParams(whs: WorkHourSchedule): List<WorkHourSchedule>
						+ delete(whs: WorkHourScheduleId): void

					}
				}
				package "services" {
					interface WorkHourDomain {
						+ create(whs: WorkHourSchedule): WorkHourSchedule
						+ update(whs: WorkHourSchedule): WorkHourSchedule
					}
					class WorkHourDomainService <<implements WorkHourDomain>> {
						+ create(whs: WorkHourSchedule): WorkHourSchedule
						+ update(whs: WorkHourSchedule): WorkHourSchedule
					}
					WorkHourDomainService "1" *.. "1" WorkHourDomain : implements >
					note bottom of WorkHourDomain
					- Can be used by the usecaseservice for specific domain contraints
					end note

					class WorkHourDomainConfig <<@Configuration>> {}
					note bottom of WorkHourDomainConfig
					- ensures autowiring of WorkHourDomain
					end note
				}
			}


			package "application" {
				package "api" {
					package "dto" {
						class CreateWorkHourScheduleCmd {
							- startTime : String
							- endTime : String
							- weekday : WeekDay
							- sopId : UUID
						}
						class CreatedWorkHourScheduleResult {
							- scheduleId : UUID
						}
						class UpdateWorkHourScheduleCmd {
							- scheduleId : UUID
							- startTime : String
							- endTime : String
							- weekday : WeekDay
							- sopId : UUID
						}
						class FindByScheduleIdQuery {
							- scheduleId : UUID
						}
						class FindByScheduleParamsQuery {
							- scheduleId : UUID
							- startTime : String
							- endTime : String
							- weekday : WeekDay
							- sopId : UUID	
						}
						class WorkScheduleResponse {
							- scheduleId : UUID
							- startTime : String
							- endTime : String
							- weekday : WeekDay
							- sopId : UUID	
						}

					}
					interface WorkHourDirectory {
						+ create(wh: CreateWorkHourScheduleCmd): UUID
						+ readById(wh: FindByScheduleId): WorkScheduleResponse
						+ readByParams(wh: FindByScheduleParams): List<WorkScheduleResponse>
						+ update (wh: UpdateWorkHourScheduleCmd): UUID

					}
				}
				class WorkHourApplicationService {
						+ create(wh: CreateWorkHourScheduleCmd): UUID
						+ readById(wh: FindByScheduleId): WorkScheduleResponse
						+ readByParams(wh: FindByScheduleParams): List<WorkScheduleResponse>
						+ update (wh: UpdateWorkHourScheduleCmd): UUID
				}
				WorkHourApplicationService "1" *.. "1" WorkHourDirectory : implements >
				WorkHourApplicationService "1" *.. "1" WorkHourRepositoryPort : injects >
				WorkHourApplicationService "1" *.. "1" WorkHourDomain : injects >
			}

			package "interfaceadapters" {
				package "persistence" {
					package "jpa" {
						class WorkHourEntity <<@Entity>> {
							- workHourId: UUID
							- startTime: String
							- endTime: String
							- weekday: WeekDay
							- sopId: UUID

						}
						class WorkHourJpaMapper {
							+ toDomain(whse: WorkHourEntity): WorkHourSchedule
							+ toEntity(whs: WorkHourSchedule): WorkHourEntity
							+ copyIntoEntity(whs: WorkHourSchedule, (whse: WorkHourEntity): void
						} 
						class WorkHourRepositoryJpaAdapter <<implements WorkHourRepositoryPort>> {
							+ save(whs: WorkHourSchedule): WorkHourSchedule
							+ findById(whs: WorkHourSchedule): Optional<WorkHourSchedule>
							+ findBySeachParams(whs: WorkHourSchedule): List<WorkHourSchedule>
							+ delete(whse: WorkHourScheduleId): void
						}
						WorkHourRepositoryJpaAdapter "1" *.. "1" WorkHourRepositoryPort : implements >
						interface WorkHourSpringDataRepository <<implements JpaRepository>> {
							+ save(whse: WorkHourEntity): WorkHourEntity
							+ findById(id: UUID): Optional<WorkHourEntity>
							+ findBySearchParams(whs: WorkHourSchedule): List<WorkHourSchedule>
							+ delete(whse: WorkHourEntity): void
						}

					}
				}

			}
			package "interfaceweb" {
				class InternalWorkHourController <<@RestController>> {
					+ create(cr: CreateWorkHourScheduleCmd): CreatedWorkHourScheduleResult <<@PostMapping>>
					+ update(cr: UpdateWorkHourScheduleCmd): void <<@PutMapping>>
					+ getByParams(cr: FindByScheduleParams): WorkScheduleResponse <<@GetMapping>>

				}
				InternalWorkHourController "1" *.. "1" WorkHourDirectory : injects >
				
			}
			class WorkHourApplicationStart {
				+ main(args: String[]): void
			}
			
		}

	}
	
}


workhour ..> sharedkernel : uses >
workhour ..> common.web : uses >
workhour ..> common.data : uses >
workhour ..> common.security : uses >
workhour ..> common.core : uses >

@enduml